--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
-    "jspdf": "^2.5.1",
+    "autoprefixer": "^10.4.0",
+    "jspdf" : "^2.5.1",
     "html2canvas": "^1.4.1"
 
 
