--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "cra-flight-training",
+  "name": "flight-training-app",
   "version": "1.0.0",
-  "private": true,
+  "description": "Flight training and checking form",
+  "engines": {
+    "node": "18.x"
+  },
+  "scripts": {
+    "start": "vite"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "jspdf" : "^2.5.1",
+    "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1"
-
-
   },
-  "scripts": {
-    "start": "react-scripts start"
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
