--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "vite"
+    "start": "vite",
+    "dev": "vite"
   },
   "dependencies": {
     "react": "^18.2.0",
