--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "pdf-lib": "^1.17.1",
